force-app/main/default/objects/Course__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the course</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>