force-app/main/default/objects/Course__c/fields/Total_Enrollments__c.field-meta.xml
<CustomField>
    <fullName>Total_Enrollments__c</fullName>
    <label>Total Enrollments</label>
    <summaryForeignKey>Enrollment__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>