force-app/main/default/objects/Course__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <label>Total Revenue</label>
    <summarizedField>Enrollment__c.Amount_Paid__c</summarizedField>
    <summaryForeignKey>Enrollment__c.Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>