force-app/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Fee__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Total_Enrollments__c</columns>
    <columns>Total_Revenue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Courses</label>
</ListView>